fix(1416): remove text wrap after white space in segment

--- a/packages/components/src/components/segmented-controls/segmented-control/segmented-control.scss
+++ b/packages/components/src/components/segmented-controls/segmented-control/segmented-control.scss
@@ -12,6 +12,8 @@
     border-radius: tokens.$ifxBorderRadius12;
     padding: 0 tokens.$ifxSize100 0 tokens.$ifxSize100;
 
+    white-space: nowrap;
+    
     height: 34px;
 
     background-color: tokens.$ifxColorBaseWhite;
